Added to the Notes

--- a/2-Google-Data-Analytics/1-Foundations-data-data-everywhere/5-endless-career-possibilites/Notes.ipynb
+++ b/2-Google-Data-Analytics/1-Foundations-data-data-everywhere/5-endless-career-possibilites/Notes.ipynb
@@ -161,6 +161,39 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "* Tugas seorang analis data adalah menyelesaikan tugas bisnis yang membantu perusahaan menggunakan data.\n",
+    "* Ada tiga hal yang perlu dipahami: \n",
+    "    * masalah (**issue**)\n",
+    "    * pertanyaan (**question**), dan \n",
+    "    * masalah (**problem**).\n",
+    "* Coca-Cola memiliki **pertanyaan** tentang produk baru, dan analisis data memberikan wawasan tentang rasa baru yang disukai pelanggan.\n",
+    "* City Zoo and Aquarium memiliki masalah dengan penjadwalan karyawan, dan analisis data membantu mereka menemukan strategi penjadwalan terbaik.\n",
+    "* Tugas bisnis (**business task**) adalah pertanyaan atau masalah yang dijawab oleh analisis data untuk kepentingan bisnis.\n",
+    "* **Keputusan berbasis data** adalah penggunaan fakta yang ditemukan melalui analisis data untuk mengarahkan strategi bisnis.\n",
+    "* Analisis data membantu perusahaan membuat keputusan yang lebih baik dengan memberikan gambaran lengkap tentang masalah dan penyebabnya.\n",
+    "* Sebagai analis data, tugas Anda adalah mengajukan pertanyaan yang tepat, merencanakan cara terbaik untuk mengumpulkan dan menganalisis data, serta menyajikannya secara visual kepada tim untuk mengambil keputusan berbasis data.\n",
+    "* Data adalah alat yang kuat, namun perlu digunakan dengan tanggung jawab untuk memastikan pengumpulan, analisis, dan presentasi data dilakukan dengan adil bagi individu yang diwakili oleh data tersebut."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "🔑\n",
+    "* **Issue**: A topic or subject to investigate\n",
+    "* **Question**: Designed to discover information\n",
+    "* **Problem**: An obstacle or complication that needs to be worked out\n",
+    "* **Business Task**: The question or problem data analysisi answers for a business\n",
+    "* **Data-driven decision-making**: Using facts to guide business strategy\n",
+    "* When we are making decisions based on guts feeling, we only provide a short-term solution. Data helps us to see the whole thing."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
