Changed how my ipynb work with Images

--- a/2-Google-Data-Analytics/1-Foundations-data-data-everywhere/5-endless-career-possibilites/Notes.ipynb
+++ b/2-Google-Data-Analytics/1-Foundations-data-data-everywhere/5-endless-career-possibilites/Notes.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "### Self-Reflection: Business use of data (Quiz)\n",
     "\n",
-    "![quiz](Images\\Asset1.png)"
+    "![quiz](Images\\\\Asset1.png)"
    ]
   },
   {
