Finished GDA Week 5 with 100%

--- a/2-Google-Data-Analytics/1-Foundations-data-data-everywhere/5-endless-career-possibilites/Notes.ipynb
+++ b/2-Google-Data-Analytics/1-Foundations-data-data-everywhere/5-endless-career-possibilites/Notes.ipynb
@@ -13,16 +13,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Businesses of all kinds value the work done by data analysts. In this part of the course, you’ll find out about these businesses and the specific jobs and tasks that analysts perform for them. You’ll also learn how your data analyst certificate will help you meet many of the requirements for a position with these businesses.\n",
+    "Usaha-usaha dari berbagai jenis menghargai pekerjaan yang dilakukan oleh analis data. Di bagian ini dari kursus, Anda akan menemukan tentang usaha-usaha tersebut dan pekerjaan dan tugas khusus yang dilakukan oleh analis untuk mereka. Anda juga akan belajar bagaimana sertifikat analis data Anda akan membantu Anda memenuhi banyak persyaratan untuk posisi dengan usaha-usaha ini.\n",
     "\n",
-    "* Describe the role of a data analyst with specific reference to job roles\n",
-    "* Discuss how the Google Data Analytics Certificate can help a candidate meet the requirements of a given job\n",
-    "* Explain how a business task may be appropriate for a data analyst, with reference to fairness and the value of the data analyst\n",
-    "* Identify companies that would potentially hire data analysts\n",
-    "* Describe how one's prior experiences may be applied to a career as a data analyst\n",
-    "* Determine whether the use of data constitutes fair or unfair practices\n",
-    "* Understand the different ways organizations use data\n",
-    "* Explain the concept of data-driven decision-making including specific examples"
+    "* Deskripsikan peran seorang analis data dengan referensi khusus pada peran pekerjaan:\n",
+    "* Diskusikan bagaimana Sertifikat Analisis Data Google dapat membantu seorang kandidat memenuhi persyaratan pekerjaan yang diberikan.\n",
+    "* Jelaskan bagaimana tugas bisnis mungkin sesuai untuk seorang analis data, dengan referensi pada *fairness* dan *value* dari data analyst.\n",
+    "* Identifikasi perusahaan-perusahaan yang berpotensi akan mempekerjakan analis data.\n",
+    "* Deskripsikan bagaimana pengalaman sebelumnya seseorang dapat diterapkan pada karir sebagai analis data.\n",
+    "* Tentukan apakah penggunaan data merupakan praktik yang *fair* atau *unfair*.\n",
+    "* Pahami berbagai cara organisasi menggunakan data.\n",
+    "* Jelaskan konsep pengambilan keputusan berbasis data, termasuk contoh-contoh spesifik."
    ]
   },
   {
@@ -46,14 +46,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will talk about how business using data in practical way.\n",
+    "* Pembahasan tentang cara praktis bisnis menggunakan data dan peluang yang dapat diciptakannya.\n",
+    "* Penekanan pada pentingnya pemahaman mengapa Anda belajar keterampilan analisis data.\n",
+    "* Penjelasan tentang peran-peran yang dimainkan oleh analis data dalam industri-industri yang berbeda.\n",
+    "* Pentingnya keadilan dan menghindari bias dalam menganalisis data untuk tugas bisnis.\n",
+    "* Pembicaraan tentang peluang yang dapat dimanfaatkan dan bagaimana program ini memengaruhi kesuksesan masa depan dan peran analis data.\n",
+    "* Kesiapan untuk memulai pembahasan dengan penekanan pada poin-poin di atas.\n",
     "\n",
-    "We will talk about:\n",
-    "* The role of a Data Analyst\n",
-    "* Business tasks for Data Analyst\n",
-    "* Fairness in analysis\n",
-    "* Opportunities for you\n",
-    "* And your future success!"
+    "🔑 : praktis data di bisnis, peran2 analis, pentingnya memerhatikan bias"
    ]
   },
   {
@@ -69,14 +69,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Data analysts work in various industries, such as technology, marketing, finance, healthcare, and more.\n",
-    "* Companies like Coca-Cola and Google use data analytics to enhance their marketing strategies and provide accurate search results.\n",
-    "* Small businesses are also leveraging data-driven insights to improve operations and make better decisions.\n",
-    "* An example is a city zoo and aquarium using data analysis to predict visitor numbers based on local climate data, improving staffing and visitor experiences.\n",
-    "* The healthcare industry uses data analysts to analyze clinic attendance data and optimize staffing to reduce wait times and improve patient care.\n",
-    "* Data analysts play a crucial role in helping companies across industries utilize data effectively.\n",
-    "* By completing the program, learners will acquire core skills that are valuable in any industry relying on data-driven decision-making.\n",
-    "* The upcoming topics will explore specific business tasks where data is beneficial and further showcase the impact of data analysts in empowering businesses through data."
+    "* Analis data dapat bekerja di berbagai industri seperti teknologi, pemasaran, keuangan, dan perawatan kesehatan.\n",
+    "* Perusahaan-perusahaan besar seperti Coca-Cola dan Google menggunakan data untuk meningkatkan strategi pemasaran dan hasil pencarian.\n",
+    "* Bahkan bisnis kecil mulai memanfaatkan data untuk meningkatkan operasional dan pengambilan keputusan.\n",
+    "* Contoh nyata penggunaan data adalah prediksi jumlah pengunjung harian di kebun binatang berdasarkan data cuaca dan prediksi jam sibuk di rumah sakit berdasarkan data kunjungan klinik.\n",
+    "* Kemampuan analisis data akan membuat Anda berharga di berbagai industri yang mengambil keputusan berdasarkan data.\n",
+    "* Pembahasan selanjutnya akan fokus pada tugas bisnis yang dapat dibantu oleh data dan bagaimana analis data memberdayakan bisnis melalui data.\n",
+    "\n",
+    "🔑: Data analyst memegang peran penting di berbagai organisasi dengan menggunakan data-driven insight untuk meningkatkan strategi bisnis, meningkatkan efisiensi operasional dan membuat keputusan berdasarkan data."
    ]
   },
   {
@@ -181,13 +181,145 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "🔑\n",
-    "* **Issue**: A topic or subject to investigate\n",
-    "* **Question**: Designed to discover information\n",
-    "* **Problem**: An obstacle or complication that needs to be worked out\n",
-    "* **Business Task**: The question or problem data analysisi answers for a business\n",
-    "* **Data-driven decision-making**: Using facts to guide business strategy\n",
-    "* When we are making decisions based on guts feeling, we only provide a short-term solution. Data helps us to see the whole thing."
+    "🔑: Sebagai seorang analis data, tugas bisnis yang akan Anda hadapi adalah membantu perusahaan dalam menggunakan data, yang melibatkan menjawab **pertanyaan** dan menyelesaikan **masalah** yang mendasarinya dengan melakukan analisis data yang relevan."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rachel: Data detectives"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Rachel adalah Business systems and analytics lead di Verily.\n",
+    "* Seorang analis data dapat memecahkan berbagai jenis masalah dengan menggunakan berbagai jenis data.\n",
+    "* Rachel sebagai analis data keuangan di Verily bertanggung jawab mengubah informasi keuangan perusahaan menjadi laporan dan wawasan yang dapat dipahami oleh tim bisnis.\n",
+    "* Salah satu tugas penting yang dilakukan oleh Rachel adalah menciptakan laporan laba rugi untuk setiap unit bisnis di Verily, sehingga tim dapat melihat anggaran dan pengeluaran mereka secara real-time.\n",
+    "* Data menjadi bagian hidup yang terus berubah dan tugas analis data adalah mencari cara untuk memahami dan menyusun data dengan bijak.\n",
+    "* Meskipun menjadi tantangan, bekerja dengan data dapat memberikan hasil yang sangat memuaskan ketika semua informasi terhubung dan memberikan wawasan yang diharapkan.\n",
+    "* Saran terbaik untuk seorang analis data pemula adalah terus mencoba dan tidak takut untuk mencari pendekatan atau pertanyaan yang berbeda, karena suatu saat data akan memberikan wawasan yang diinginkan."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Understanding data and fairness"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Fairness** dalam analisis data berarti memastikan bahwa analisis tersebut tidak menciptakan atau memperkuat bias.\n",
+    "* Sebagai seorang analis data, penting bagi Anda untuk membantu menciptakan sistem yang adil dan inklusif bagi semua orang.\n",
+    "* Terkadang kesimpulan berdasarkan data dapat benar tetapi tidak adil.\n",
+    "* Penting untuk mempertimbangkan semua data yang tersedia dan faktor-faktor sekitarnya saat mengambil kesimpulan.\n",
+    "* Contoh: Perusahaan yang pegawainya 90% pria melakukan analisa data performa pegawai mereka:\n",
+    "    * Kesimpulan yang hanya pria yang berhasil di perusahaan tersebut adalah benar, tetapi mengabaikan faktor sistematis lain yang berkontribusi pada masalah ini.\n",
+    "    * Seorang analis data yang etis dapat menyimpulkan bahwa budaya perusahaan mencegah beberapa karyawan untuk berhasil, dan perusahaan perlu mengatasi masalah tersebut untuk meningkatkan kinerja.\n",
+    "* Sebagai seorang analis data, tanggung jawab Anda adalah memastikan analisis Anda adil dan mempertimbangkan konteks sosial yang rumit yang dapat menciptakan bias dalam kesimpulan.\n",
+    "* Penting untuk memikirkan tentang keadilan sejak awal saat mengumpulkan data untuk tugas bisnis hingga saat Anda menyajikan kesimpulan kepada pemangku kepentingan.\n",
+    "* Contoh analisis data yang mempertimbangkan keadilan adalah tim ilmuwan data Harvard yang mengembangkan platform mobile untuk melacak pasien yang berisiko terkena penyakit kardiovaskular di daerah Amerika Serikat yang disebut Stroke Belt.\n",
+    "* Tim ini menggunakan langkah-langkah keadilan untuk memastikan bahwa mereka adil saat memeriksa data yang sensitif dan berpotensi bias.\n",
+    "* Mereka bekerja sama dengan ilmuwan sosial dan mengumpulkan data yang dilaporkan sendiri dalam sistem terpisah untuk menghindari bias rasial.\n",
+    "* Untuk memastikan populasi sampel tersebut representatif, mereka melakukan oversampling pada kelompok non-dominan.\n",
+    "* Tim ini menjadikan keadilan sebagai prioritas utama dalam setiap langkahnya, sehingga mereka berhasil mengumpulkan data dan membuat kesimpulan yang tidak berdampak negatif pada komunitas yang mereka studi.\n",
+    "* Memahami apa yang dimaksud dengan keadilan dalam analisis data akan terus dibangun dalam program ini, dan Anda akan berlatih melalui beberapa aktivitas."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Self-Reflection: Business cases"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Business cases](Images/Asset3.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Images/Asset4.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Images/Asset5.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Discussion Prompt: Case opinion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](Images/Asset6.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Alex: Fair and ethical data decisions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Tim Etika AI di Google dipimpin oleh Alex, seorang ilmuwan peneliti.\n",
+    "* Tim ini fokus pada bagaimana AI berinteraksi dengan masyarakat dan bagaimana penggunaan AI dapat membantu atau membahayakan masyarakat terpinggirkan.\n",
+    "* Etika data melibatkan cara yang baik dan benar dalam menggunakan data.\n",
+    "* Tujuan utama etika data adalah meningkatkan kehidupan orang dengan menggunakan data.\n",
+    "* Pertimbangan dalam etika data meliputi siapa yang mengumpulkan data, mengapa mereka mengumpulkannya, bagaimana cara mereka mengumpulkannya, dan untuk tujuan apa.\n",
+    "* Selain meminimalkan bahaya, penting untuk memikirkan bagaimana penggunaan data tersebut akan memberikan manfaat kepada orang-orang yang terwakili dalam data.\n",
+    "* Sebagai seorang data scientist atau data analyst, penting untuk tidak melupakan tanggung jawab terhadap orang-orang yang terwakili dalam data.\n",
+    "* Perlindungan dan privasi data juga menjadi hal penting, termasuk informasi pribadi seperti gambar, suara, dan teks.\n",
+    "* Mekanisme yang memberikan pengguna lebih banyak kontrol atas data mereka juga perlu dipertimbangkan.\n",
+    "* Peningkatan kontrol pengguna terhadap data mereka penting, termasuk kemampuan memberikan persetujuan atau meminta penghapusan data.\n",
+    "* Data terus berkembang, dan masalah etika data menjadi semakin penting seiring pertumbuhan tersebut."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Weekly Challenge\n",
+    "\n",
+    "![](Images/Asset7.png)\n",
+    "![](Images/Asset8.png)\n",
+    "![](Images/Asset9.png)"
    ]
   },
   {
