--- a/1-Google-IT-Automation/1-Crash-Course-on-Python/1-Hello-Python/Notes.ipynb
+++ b/1-Google-IT-Automation/1-Crash-Course-on-Python/1-Hello-Python/Notes.ipynb
@@ -355,6 +355,256 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Quiz: Introduction to Python\n",
+    "\n",
+    "![Quiz Intro to Python](Images/Asset3.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hello, World!\n",
+    "\n",
+    "- This is how you print 'Hello, World' in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, World!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "- The code uses the print function in Python to display the words \"hello world\" on the screen.\n",
+    "- **Functions** in programming are blocks of code that perform a specific task.\n",
+    "- **Keywords** are reserved words in the programming language used to construct instructions.\n",
+    "- Functions and keywords are part of the language's syntax and are used to communicate instructions to the computer.\n",
+    "- Examples of keywords in Python include if, while, and for, and they have specific usage rules.\n",
+    "- **Strings** are blocks of text wrapped in quotation marks and are manipulated by the script.\n",
+    "- Text outside of quotation marks is considered part of the code itself.\n",
+    "\n",
+    "Trivia:\n",
+    "- The \"hello world\" example is a traditional starting point for learning programming languages and provides an initial understanding of how functions are used and what a program looks like.\n",
+    "- The Python version of the \"hello world\" example is a single line, while other languages may require more lines.\n",
+    "- Writing \"hello world\" is a simple introduction, and further challenges await to enhance programming skills."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting Information from the User\n",
+    "\n",
+    "- Programs need to receive information from the user to be useful.\n",
+    "- Data can be provided to a computer through various means, such as text fields, buttons, drop-down menus, command line parameters, or interactive prompts.\n",
+    "- Different platforms, programs, and apps process data in different ways.\n",
+    "- The example of automating duplicate email identification involved providing a list of emails as the data, typically stored in a file.\n",
+    "- In the initial examples of this course, data is directly included in the code as its own line, which is simple but limited.\n",
+    "- Future courses will explore more advanced methods of feeding data into code.\n",
+    "- The concept of obtaining and processing data is demonstrated below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Brook\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Brook\"\n",
+    "print(\"Hello \" + name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Alex\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If you want to change the name\n",
+    "\n",
+    "name = \"Alex\"\n",
+    "print(\"Hello \" + name)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Python can be your calculator\n",
+    "\n",
+    "- You can also use python as your Calculator!\n",
+    "- Here is the example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "63\n",
+      "-0.25\n",
+      "0.3333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(4+5)\n",
+    "print(9*7)\n",
+    "print(-1/4)\n",
+    "print(1/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For complex calculations, use parenthese \"()\"\n",
+    "print(((2050/5)-32)/9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Power\n",
+    "# 2^3\n",
+    "\n",
+    "print(2**3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Python's math capabilities are useful for various tasks in IT jobs that involve calculations.\n",
+    "- Writing a script can help perform calculations faster and more accurately.\n",
+    "- Python has advanced numeric capabilities for data analysis, statistics, machine learning, and scientific applications.\n",
+    "- The course focuses on basic math operations and does not cover advanced capabilities.\n",
+    "- Online resources are available for further learning.\n",
+    "- A cheat sheet will be provided for programming concepts covered.\n",
+    "- The next step is a quiz with small coding exercises.\n",
+    "- Encouragement is given to tackle the upcoming challenges confidently."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First Programming Concepts\n",
+    "\n",
+    "![](Images/Asset4.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Links:\n",
+    "\n",
+    "1. [Built-in Functions](https://docs.python.org/3/library/functions.html)\n",
+    "2. [Python Keywords](https://www.w3schools.com/python/python_ref_keywords.asp)\n",
+    "3. [Different Arithmetic operators in Python](https://flexiple.com/python/arithmetic-operators-in-python/)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quiz: Hello World\n",
+    "\n",
+    "![](Images/Asset5.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module Review\n",
+    "\n",
+    "![](Images/Asset6.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Module1: Quiz\n",
+    "\n",
+    "![](Images/Asset7.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
